--- a/services.html
+++ b/services.html
@@ -7,9 +7,22 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Six Figure Labs: Web Development & Web Design</title>
-    <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
-    <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
-    <meta property="og:image" content="openGraphBg.png" />
+    <meta name="title" content="Six Figure Labs: Web Development & Web Design">
+    <meta name="description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sixfigurelabs.com">
+    <meta property="og:title" content="Six Figure Labs: Web Development & Web Design">
+    <meta property="og:description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    <meta property="og:image" content="/images/openGraphBg.png">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.sixfigurelabs.com">
+    <meta property="twitter:title" content="Six Figure Labs: Web Development & Web Design">
+    <meta property="twitter:description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    <meta property="twitter:image" content="/images/openGraphBg">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/services.css">
     <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
@@ -247,7 +260,7 @@
         <div class="call__card container shadow">
             <div class="call__left">
                 <form class="call__left" action="https://formsubmit.co/ad3c79132844b0215ab41892bc07e55a" method ="POST" novalidate>
-                    <input type="hidden" name="_next" value = "http://127.0.0.1:5500/thanks.html">
+                    <input type="hidden" name="_next" value = "http://www.sixfigurelabs.com/thanks.html">
                     <input type="hidden" name="_subject" value="New lead!">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="box">
