--- a/thanks.html
+++ b/thanks.html
@@ -7,17 +7,29 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Six Figure Labs: Web Development & Web Design</title>
-    <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
-    <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
-    <meta property="og:image" content="openGraphBg.png" />
+    <meta name="title" content="Six Figure Labs: Web Development & Web Design">
+    <meta name="description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sixfigurelabs.com">
+    <meta property="og:title" content="Six Figure Labs: Web Development & Web Design">
+    <meta property="og:description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    <meta property="og:image" content="/images/openGraphBg.png">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.sixfigurelabs.com">
+    <meta property="twitter:title" content="Six Figure Labs: Web Development & Web Design">
+    <meta property="twitter:description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    <meta property="twitter:image" content="/images/openGraphBg.png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/services.css">
     <link rel="stylesheet" href="/css/about.css">
     <link rel="stylesheet" href="/css/our-work.css">
     <link rel="stylesheet" href="/css/catch-all.css">
-    <link rel="stylesheet" href="/css/thanks.css">
     <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
-    <script src="../js/nav.js" defer></script>
+    <script src="/js/nav.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
