--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
                     <h2 class = "call__heading">Want a free consultation?</h2>
-                    <h4>We'd love to get a feel for your business and answer any questions, let's get to work!
+                    <h4>WE'd love to get a feel for your business and answer any questions, let's get to work!
                     </h4>
                     <div class="email-container">
                     <input type="email" name="Email" id="email-call" placeholder="Email">
