--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <section class="call__to__action" data-aos="fade-up">
         <div class="call__card container shadow">
             <div class="call__left">
-                <form class="call__left" action="https://formsubmit.co/ad3c79132844b0215ab41892bc07e55a" method ="POST" novalidate>
+                <form class="call__left" action="https://formsubmit.co/mitch@sixfigurelabs.com" method ="POST" novalidate>
                     <input type="hidden" name="_next" value = "http://www.sixfigurelabs.com/thanks.html">
                     <input type="hidden" name="_subject" value="New lead!">
                     <input type="hidden" name="_captcha" value="false">
