--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide shadow">
                     <div class="card__info">
-                        <h4 id="card__first-name">Tyler Mox</h4>
-                        <p>Product Manager</p>
+                        <h4 id="card__first-name">Brad Dubner</h4>
+                        <p>President</p>
                     </div>
                     <div class="card__paragraph">
                         <h5>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore adipisci accusantium
@@ -119,12 +119,12 @@
                             consectetur?"</h5>
                     </div>
                     <div class="card__logo">
-                        <img src="/images/volume.svg" alt="">
+                        <img src="/images/NetcapLogo.svg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="card__info">
-                        <h4 id="card__second-name">Jared Rabone</h4>
+                        <h4 id="card__second-name">Tyler Mox</h4>
                         <p>President & CEO</p>
                     </div>
                     <div class="card__paragraph">
