--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Six Figure Labs: Web Development & Web Design</title>
     <!-- Primary Meta Tags -->
 <title>Six Figure Labs: Web Development & Web Design</title>
 <meta name="title" content="Six Figure Labs: Web Development & Web Design">
-<meta name="description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+<meta name="description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.sixfigurelabs.com">
 <meta property="og:title" content="Six Figure Labs: Web Development & Web Design">
-<meta property="og:description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+<meta property="og:description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 <meta property="og:image" content="/images/openGraphBg.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://www.sixfigurelabs.com">
 <meta property="twitter:title" content="Six Figure Labs: Web Development & Web Design">
-<meta property="twitter:description" content="Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+<meta property="twitter:description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 <meta property="twitter:image" content="/images/openGraphBg.png">
 <link rel="stylesheet" href="/css/styles.css">
 <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
