--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Primary Meta Tags -->
 <title>Six Figure Labs: Web Development & Web Design</title>
-<meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
+<meta property="og:title" content="TESTWeb Development & Web Design" />
 <meta name="title" content="Six Figure Labs: Web Development & Web Design">
 <meta name="description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 
@@ -90,7 +90,7 @@
             <p class="huge text-shadow">Welcome to the <br> next generation of <br> website <span
                     class="auto-type"></span>
             </p>
-            <h4 class="second__content light text-shadow">Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.</h4>
+            <h4 class="second__content light text-shadow">Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.</h4>
 
             <a href="/about.html" class="btn-gradient hvr-grow shadow magic-hover magic-hover__square">
                 <div class="btn__text">
@@ -177,7 +177,7 @@
 
                     <div class="timeline__component timeline__component--bg shadow" data-aos="fade-right">
                         <h3 class="timeline__title">Wireframe Prototype</h3>
-                        <h5 class="timeline__paragraph">We use all the data from the UX findings to mockup your site, each page is designed to meet the needs of the client. We start by creating a color scheme, choosing typography, and collecting all content. We remain in close contact with the client every step of the way, no page is finished until we receive approval from the client.</h5>
+                        <h5 class="timeline__paragraph">We use all the data from the UX findings to mockup your site, each page is designed to meet the needs of the client. We start by creating a color scheme, choosing typography, and collecting all content. We remain in close contact with you every step of the way, no page is finished until we receive your approval.</h5>
                     </div>
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
