--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Primary Meta Tags -->
 <title>Six Figure Labs: Web Development & Web Design</title>
 <!-- <meta property="og:title" content="Six Figure: Web Development & Web Design" /> -->
-<meta name="title" content="Six Figure Labs: Web Development & Web Design">
+<!-- <meta name="title" content="Six Figure Labs: Web Development & Web Design"> -->
 <meta name="description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 
 <!-- Open Graph / Facebook -->
