--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Primary Meta Tags -->
 <!-- <title>Six Figure Labs: Web Development & Web Design</title> -->
-<meta property="og:title" content="Six Figure Labs - Web Development & Web Design" />
+<meta property="og:title" content="Six Figure Labs - Web" />
 <!-- <meta name="title" content="Six Figure Labs: Web Development & Web Design"> -->
 <meta name="description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 
