--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Primary Meta Tags -->
 <title>Six Figure Labs Web Development & Web Design</title>
-<meta property="og:title" content="Six Figure Labs | Web Development & Web Design" />
-<meta name="title" content="Six Figure Labs Web| Development & Web Design">
+<meta property="og:title" content="sdkjfn | Web Development & Web Design" />
+<meta name="title" content="sdkjfnd | Development & Web Design">
 <meta name="description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.sixfigurelabs.com">
-<meta property="og:title" content="Six Figure Labs | Web Development & Web Design">
+<meta property="og:title" content="askjdnfsdjk | Web Development & Web Design">
 <meta property="og:description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
 <meta property="og:image" content="/images/openGraphBg.png">
 
