--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
 
             <div class="founder__info">
                 <h3 id="founder__first-name">Mitchell Stahl</h3>
-                <p class = "light">BS, Computer Science</p>
+                <p class = "light">BS, Computer Science<br><span>Florida State University</span></p>
             </div>
             <div class="founder__img">
                 <img src="/images/FounderPic.jpg" alt="">
@@ -169,7 +169,7 @@
 
             <div class="founder__info">
                 <h3 id="founder__first-name">Tyler Mox</h3>
-                <p class = "light">BS, Computer Science</p>
+                <p class = "light">BS, Computer Science <br><span>Ohio State University</span></p>
             </div>
             <div class="founder__img">
                 <img src="/images/TylerFounder.jpg" alt="">
