--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a id="home" href="/index.html">Home</a>
             <a id="services" href="/services.html">Services</a>
             <a id="about" href="/about.html">About</a>
-            <a id="our-work" href="/our-work.html">Our Work</a>
+            <a id="our-work" href="/comingsoon.html">Our Work</a>
             <a id="contact" href="/contact.html">Contact</a>
 
         </div>
@@ -374,7 +374,7 @@
                             <li><a href="/index.html">Home</a></li>
                             <li><a href="/services.html">Services</a></li>
                             <li><a href="/about.html">About</a></li>
-                            <li><a href="/our-work.html">Our Work</a></li>
+                            <li><a href="/comingsoon.html">Our Work</a></li>
                             <li><a href="/contact.html">Contact</a></li>
                         </ul>
                     </div>
