Edited Index and about page

--- a/about.html
+++ b/about.html
@@ -8,20 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Six Figure Labs | Web Development & Web Design</title>
     <meta name="title" content="Six Figure Labs | Web Development & Web Design">
-    <meta name="description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
-    
+    <meta name="description"
+        content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.sixfigurelabs.com">
     <meta property="og:title" content="Six Figure Labs | Web Development & Web Design">
-    <meta property="og:description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    <meta property="og:description"
+        content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
     <meta property="og:image" content="/images/openGraphBg.png">
-    
+
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.sixfigurelabs.com">
     <meta property="twitter:title" content="Six Figure Labs | Web Development & Web Design">
-    <meta property="twitter:description" content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
+    <meta property="twitter:description"
+        content="Through UX and UI strategy, we engineer websites that drive sales and increase your online presence. Let us create the best you.">
     <meta property="twitter:image" content="/images/openGraphBg.png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/services.css">
@@ -30,58 +33,61 @@
     <script src="/js/nav.js" defer></script>
     <script src="/js/call-form.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link
-  rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 
 <body>
 
     <section class="header">
         <div class="group">
-        <div class="nav container">
-            <div class="nav__left">
-                <a href = "/index.html" class="nav__logo">
-                    <img id = "logo" src="images/6FLMainLogo.svg" alt="">
-                </a>
-                <ul class="nav__items">
-                    <li><a id="home" href="./index.html">Home</a></li>
-                    <li><a id="services" href="./services.html">Services</a></li>
-                    <li><a id="about" href="./about.html">About</a></li>
-                    <li><a id="our-work" href="./comingsoon.html">Our Work</a></li>
-                </ul>
-            </div>
-            <div class="nav__right">
-                <a href="./contact.html" class="btn-outline text-shadow" id="contact-button">
-                    <div class="btn__text">
-                        <h5 href="./contact.html">Contact</h5>
-                    </div>
-                    <img class="btn__icon" src="/images/chevronDouble.svg" alt="">
-                </a>
+            <div class="nav container">
+                <div class="nav__left">
+                    <a href="/index.html" class="nav__logo">
+                        <img id="logo" src="images/6FLMainLogo.svg" alt="">
+                    </a>
+                    <ul class="nav__items">
+                        <li><a id="home" href="./index.html">Home</a></li>
+                        <li><a id="services" href="./services.html">Services</a></li>
+                        <li><a id="about" href="./about.html">About</a></li>
+                        <li><a id="our-work" href="./comingsoon.html">Our Work</a></li>
+                    </ul>
+                </div>
+                <div class="nav__right">
+                    <a href="./contact.html" class="btn-outline text-shadow" id="contact-button">
+                        <div class="btn__text">
+                            <h5 href="./contact.html">Contact</h5>
+                        </div>
+                        <img class="btn__icon" src="/images/chevronDouble.svg" alt="">
+                    </a>
 
-                <button class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
+                    <button class="hamburger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
+            </div>
+            <div class="nav mobile-nav">
+
+                <a id="home mobile" href="./index.html">Home</a>
+                <a id="services mobile" href="./services.html">Services</a>
+                <a id="about" href="./about.html">About</a>
+                <a id="our-work" href="./comingsoon.html">Our Work</a>
+                <a id="contact" href="./contact.html">Contact</a>
+
             </div>
         </div>
-        <div class="nav mobile-nav">
-
-            <a id="home mobile" href="./index.html">Home</a>
-            <a id="services mobile" href="./services.html">Services</a>
-            <a id="about" href="./about.html">About</a>
-            <a id="our-work" href="./comingsoon.html">Our Work</a>
-            <a id="contact" href="./contact.html">Contact</a>
-
-        </div>
-    </div>
     </section>
 
     <section class="services__second" data-aos="fade-right">
-        <h1 class="huge text-shadow">The <span class ="gradient">Six Figure</span> Team</h1>
+        <h1 class="huge text-shadow">The <span class="gradient">Six Figure</span> Team</h1>
         <div class="services__second__wrapper container">
-        <h4 class="second__content light text__shadow">Teamworkreally is everything. Based in South Florida, our team works tirelessly to grant you a dominant online presence. We view every project as an opportunity to gain experience and credibility, that's why we rarely turn a project down. Founded in 2022, our growth has been tremendous, we’re focusing on gaining as much credibility as possible. We take the necessary steps to make your website stand out. Every. Single. Time.</h4>
+            <h4 class="second__content light text__shadow">Teamworkreally is everything. Based in South Florida, our
+                team works tirelessly to grant you a dominant online presence. We view every project as an opportunity
+                to gain experience and credibility, that's why we rarely turn a project down. Founded in 2022, our
+                growth has been tremendous, we’re focusing on gaining as much credibility as possible. We take the
+                necessary steps to make your website stand out. Every. Single. Time.</h4>
         </div>
     </section>
 
@@ -90,25 +96,25 @@
         <div class="info__card__wrapper container">
 
 
-            <div class="info__fact shadow"data-aos="fade-up">
+            <div class="info__fact shadow" data-aos="fade-up">
                 <div class="fact__heading">
-                    <h2 class = "info__num">1</h2>
+                    <h2 class="info__num">1</h2>
                 </div>
                 <div class="fact__subheading">
                     <h5>Year in Service</h5>
                 </div>
             </div>
-            <div class="info__fact shadow"data-aos="fade-up">
+            <div class="info__fact shadow" data-aos="fade-up">
                 <div class="fact__heading">
-                    <h2 class = "info__num">3+</h2>
+                    <h2 class="info__num">3+</h2>
                 </div>
                 <div class="fact__subheading">
                     <h5>Happy Clients</h5>
                 </div>
             </div>
-            <div class="info__fact shadow"data-aos="fade-up">
+            <div class="info__fact shadow" data-aos="fade-up">
                 <div class="fact__heading">
-                    <h2 class = "info__num">0</h2>
+                    <h2 class="info__num">0</h2>
                 </div>
                 <div class="fact__subheading">
                     <h5>Outsourced Employees</h5>
@@ -116,7 +122,7 @@
             </div>
             <div class="info__fact shadow " data-aos="fade-up">
                 <div class="fact__heading">
-                    <h2 class = "info__num">100%</h2>
+                    <h2 class="info__num">100%</h2>
                 </div>
                 <div class="fact__subheading">
                     <h5>Custom Designs</h5>
@@ -132,11 +138,23 @@
 
         <div class="statement" data-aos="fade-up">
             <h2 class="intro text-shadow container">Our <span class="gradient">Mission</span></h2>
-            <h4 class = "statement__content text-shadow container">Providing the most value to our clients as possible is the backbone of our business model, that's why our websites have helped many businesses become more successful and profitable. We realized that when you focus not only on website design, but on engaging users and getting them to interact as intended, you enter a totally different league of website creation. Our plan for the near future is to surpass 50 clients, maintaining a relationship with each and every one. We're in it for the long haul, and want that to be obvious in every project.</h4>
+            <h4 class="statement__content text-shadow container">Providing the most value to our clients as possible is
+                the backbone of our business model, that's why our websites have helped many businesses become more
+                successful and profitable. We realized that when you focus not only on website design, but on engaging
+                users and getting them to interact as intended, you enter a totally different league of website
+                creation. Our plan for the near future is to surpass 50 clients, maintaining a relationship with each
+                and every one. We're in it for the long haul, and want that to be obvious in every project.</h4>
         </div>
         <div class="statement" data-aos="fade-up">
             <h2 class="intro text-shadow container">Our <span class="gradient">Approach</span></h2>
-            <h4 class = "statement__content text-shadow container">We want every website to serve a purpose. In order to accomplish such a task we always think of the user first. The development is easy, the most important step of our process is our UX research. We analyze your business and engineer a UI that accomplishes your goals. A good UX & UI strategy is nothing without a solid development foundation, we have the best of both worlds. Once a client, always a client. The second your website is hosted, a <a class = "under gradient" href="comingsoon.html">Six Figure Labs account</a> is created for you on our site. Your account is the hub for everything involving your website. From maintenance requests to updated source code, it's all there.</h4>
+            <h4 class="statement__content text-shadow container">We want every website to serve a purpose. In order to
+                accomplish such a task we always think of the user first. The development is easy, the most important
+                step of our process is our UX research. We analyze your business and engineer a UI that accomplishes
+                your goals. A good UX & UI strategy is nothing without a solid development foundation, we have the best
+                of both worlds. Once a client, always a client. The second your website is hosted, a <a
+                    class="under gradient" href="comingsoon.html">Six Figure Labs account</a> is created for you on our
+                site. Your account is the hub for everything involving your website. From maintenance requests to
+                updated source code, it's all there.</h4>
         </div>
 
 
@@ -147,63 +165,70 @@
         <h2 class="intro text-shadow container">Meet the <span class="gradient">Founders</span></h2>
         <div class="founder__wrapper container">
 
-        <div class="founder" data-aos="fade-up">
+            <div class="founder" data-aos="fade-up">
 
-            <div class="founder__info">
-                <h3 id="founder__first-name">Mitchell Stahl</h3>
-                <p class = "light">BS, Computer Science<br><span>Florida State University</span></p>
-            </div>
-            <div class="founder__img">
-                <img src="/images/FounderPic.jpg" alt="">
+                <div class="founder__info">
+                    <h3 id="founder__first-name">Mitchell Stahl</h3>
+                    <p class="light">BS, Computer Science<br><span>Florida State University</span></p>
+                </div>
+                <div class="founder__img">
+                    <img src="/images/FounderPic.jpg" alt="">
 
-            </div>
-            <div class="founder__paragraph light">
-                <h4 class ="light"><span class="gradient founder-quote">“</span>At the core of it, I just love building things. When I was thinking about the concept for Six Figure Labs, I knew it would be a perfect way for me to build products and learn at the same time.<span class="gradient founder-quote">”</span></h4>
-            </div>
+                </div>
+                <div class="founder__paragraph light">
+                    <h4 class="light"><span class="gradient founder-quote">“</span>At the core of it, I just love
+                        building things. When I was thinking about the concept for Six Figure Labs, I knew it would be a
+                        perfect way for me to build products and learn at the same time.<span
+                            class="gradient founder-quote">”</span></h4>
+                </div>
 
 
-
-        </div>
-
-        <div class="founder" data-aos="fade-right">
-
-            <div class="founder__info">
-                <h3 id="founder__first-name">Tyler Mox</h3>
-                <p class = "light">BS, Computer Science <br><span>The Ohio State University</span></p>
-            </div>
-            <div class="founder__img">
-                <img src="/images/TylerFounder.jpg" alt="">
 
             </div>
-            <div class="founder__paragraph light">
-                <h4 class ="light"><span class="gradient founder-quote">“</span>A big thing for me is innovation. I’m always thinking about the next big thing and how I can try to create that. My goal is to eventually build this into a hub for innovative software products.<span class="gradient founder-quote">”</span></h4>
+
+            <div class="founder" data-aos="fade-right">
+
+                <div class="founder__info">
+                    <h3 id="founder__first-name">Tyler Mox</h3>
+                    <p class="light">BS, Computer Science and Engineering <br><span>The Ohio State University</span></p>
+                </div>
+                <div class="founder__img">
+                    <img src="/images/TylerFounder.jpg" alt="">
+
+                </div>
+                <div class="founder__paragraph light">
+                    <h4 class="light"><span class="gradient founder-quote">“</span>A big thing for me is innovation. I’m
+                        always thinking about the next big thing and how I can try to create that. My goal is to
+                        eventually build this into a hub for innovative software products.<span
+                            class="gradient founder-quote">”</span></h4>
+                </div>
             </div>
-    </div>
 
 
 
 
     </section>
- 
- 
+
+
     <section class="call__to__action" data-aos="fade-up">
         <div class="call__card container shadow">
             <div class="call__left">
-                <form class="call__left" action="https://formsubmit.co/ad3c79132844b0215ab41892bc07e55a" method ="POST" novalidate>
-                    <input type="hidden" name="_next" value = "http://www.sixfigurelabs.com/thanks.html">
+                <form class="call__left" action="https://formsubmit.co/ad3c79132844b0215ab41892bc07e55a" method="POST"
+                    novalidate>
+                    <input type="hidden" name="_next" value="http://www.sixfigurelabs.com/thanks.html">
                     <input type="hidden" name="_subject" value="New lead!">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
-                    <h2 class = "call__heading">Want a free consultation?</h2>
+                    <h2 class="call__heading">Want a free consultation?</h2>
                     <h4>We'd love to get a feel for your business and answer any questions, let's get to work!
                     </h4>
                     <div class="email-container">
-                    <input type="email" name="Email" id="email-call" placeholder="Email">
-                    <i class="uil uil-check"></i>
-                    <i class="uil uil-exclamation"></i>
-                    <p>Error Message</p>
-                </div>
+                        <input type="email" name="Email" id="email-call" placeholder="Email">
+                        <i class="uil uil-check"></i>
+                        <i class="uil uil-exclamation"></i>
+                        <p>Error Message</p>
+                    </div>
             </div>
 
             <div class="call__right">
@@ -213,8 +238,8 @@
             </form>
         </div>
     </section>
- 
- <section class="footer">
+
+    <section class="footer">
 
         <div class="footer__card container">
 
@@ -273,14 +298,14 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-   
-   <script>
+
+    <script>
         AOS.init({
             duration: 600,
             delay: 0,
             once: true
         });
-      </script>
+    </script>
     <script>
         var typed = new Typed(".auto-type", {
             strings: ['design', 'interface', 'optimization', 'technology'],
