--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             <h5>We charge based on the length and complexity of the project. Unlike many web development
                                 agencies that have a minimum price, we accept any project. The average rate for a
                                 project is between $500 and $5000, depending on what’s needed. We will always give you
-                                the best price possible. Too expensive? We will work with you.</h5>
+                                the best price possible. We offer many payment options!</h5>
                         </div>
                     </div>
                 </div>
