--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
 
                 <div class="founder__info">
                     <h3 id="founder__first-name">Tyler Mox</h3>
-                    <p class="light">BS, Computer Science and Engineering <br><span>The Ohio State University</span></p>
+                    <p class="light">BS, Computer Science Engineering <br><span>The Ohio State University</span></p>
                 </div>
                 <div class="founder__img">
                     <img src="/images/TylerFounder.jpg" alt="">
