--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <p>President</p>
                     </div>
                     <div class="card__paragraph">
-                        <h5>""</h5>
+                        <h5>“I was honestly blown away by the professionalism and passion the Six Figure Lab team possessed. Almost immediately after my site was published, I started getting more lead flow.”</h5>
                     </div>
                     <div class="card__logo">
                         <img src="/images/NetcapLogo.svg" alt="">
