--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h4 class="second__content light text-shadow">Through UX and UI strategy, we engineer websites that drive
                 sales and increase your online presence. Let us create the best you.</h4>
 
-            <a href="/about.html" class="btn-gradient hvr-grow shadow magic-hover magic-hover__square">
+            <a href="/services.html" class="btn-gradient hvr-grow shadow magic-hover magic-hover__square">
                 <div class="btn__text">
                     <h5 href="#">Learn</h5>
                 </div>
@@ -127,10 +127,10 @@
                 <div class="swiper-slide">
                     <div class="card__info">
                         <h4 id="card__second-name">Tyler Mox</h4>
-                        <p>President & CEO</p>
+                        <p>Product Manager</p>
                     </div>
                     <div class="card__paragraph">
-                        <h5>""</h5>
+                        <h5>“I was honestly blown away by the professionalism and passion the Six Figure Lab team possessed. Almost immediately after my site was published, I started getting more lead flow.”</h5>
                     </div>
                     <div class="card__logo">
                         <img src="/images/volume.svg" alt="">
@@ -142,7 +142,7 @@
                         <p>Software Developer</p>
                     </div>
                     <div class="card__paragraph">
-                        <h5>""</h5>
+                        <h5>“I was honestly blown away by the professionalism and passion the Six Figure Lab team possessed. Almost immediately after my site was published, I started getting more lead flow.”</h5>
                     </div>
                     <div class="card__logo">
                         <img src="/images/volume.svg" alt="">
