--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     class="auto-type"></span>
             </p>
             <h4 class="second__content light text-shadow">Through UX and UI strategy, we engineer websites that drive
-                sales and increase your online presence. Let us create the best you.</h4>
+                engagement and increase your online presence. Let us create the best you.</h4>
 
             <a href="/services.html" class="btn-gradient hvr-grow shadow magic-hover magic-hover__square">
                 <div class="btn__text">
