added client validation on coming soon page

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="/css/catch-all.css">
     <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
     <script src="/js/nav.js" defer></script>
+    <script src="/js/call-form.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
