--- a/services.html
+++ b/services.html
@@ -178,7 +178,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="/images/temp.svg" alt="">
+        <img src="/images/Branding-Service.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -192,7 +192,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="/images/temp.svg" alt="">
+        <img src="/images/WebDesign-Service.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -206,7 +206,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="/images/temp.svg" alt="">
+        <img src="/images/WebDevelopment-Service.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -220,7 +220,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="/images/temp.svg" alt="">
+        <img src="/images/UX-Service.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -234,7 +234,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="/images/temp.svg" alt="">
+        <img src="/images/SEO-Services.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -248,7 +248,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="/images/temp.svg" alt="">
+        <img src="/images/Backend-Service.svg" alt="">
     </div>
     </div> 
 
