Removed services section

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             strings: ['design', 'interface', 'marketing', 'technology'],
             typeSpeed: 50,
             backSpeed: 50,
-            showCursor: false,
+            showCursor: true,
             loop: true
         });
     </script>
