--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
             </div>
     </section>
 
-    <div class="services__fourth">
+    <!-- <div class="services__fourth">
 
         <div class="services__fourth__wrapper container">
 
@@ -253,7 +253,7 @@
     </div> 
 
     </div>
-    </div>
+    </div> -->
 
 
     <section class="call__to__action" data-aos="fade-up">
