--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                         <p>President</p>
                     </div>
                     <div class="card__paragraph">
-                        <h5>“I was honestly blown away by the professionalism and passion the Six Figure Lab team possessed. Almost immediately after my site was published, I started getting more lead flow.”</h5>
+                        <h5>“I can’t say enough about the talent and  sheer passion of the Six Figure Labs team. My once mediocre website has been transformed into something that I simply can’t stop looking at!”</h5>
                     </div>
                     <div class="card__logo">
-                        <img src="/images/NetcapLogo.svg" alt="">
+                        <a href="https://www.netcapfranchiseconsultants.com" target="_blank" rel="noopener noreferrer"> <img src="/images/NetcapLogo.svg" alt=""></a>
                     </div>
                 </div>
                 <div class="swiper-slide">
