--- a/about.html
+++ b/about.html
@@ -84,9 +84,7 @@
         <h1 class="huge text-shadow">The <span class="gradient">Six Figure</span> Team</h1>
         <div class="services__second__wrapper container">
             <h4 class="second__content light text__shadow">Team work really is everything. Based in South Florida, our
-                team works tirelessly to grant you a dominant online presence. We view every project as an opportunity
-                to gain experience and credibility, that's why we rarely turn a project down. Founded in 2022, our
-                growth has been tremendous, we're focusing on gaining as much credibility as possible. We take the
+                team strives to grant you a dominant online presence. We take the
                 necessary steps to make your website stand out. Every. Single. Time.</h4>
         </div>
     </section>
