--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card__info">
-                        <h4 id="card__second-name">Tyler Mox</h4>
-                        <p>Product Manager</p>
+                        <h4 id="card__second-name">Shannon Staton</h4>
+                        <p>Dorm Executive Director</p>
                     </div>
                     <div class="card__paragraph">
-                        <h5>“I was honestly blown away by the professionalism and passion the Six Figure Lab team possessed. Almost immediately after my site was published, I started getting more lead flow.”</h5>
+                        <h5>“The NoleLodging website that Six Figure Labs created totally changed how our students interact with University Housing. They did an amazing job.”</h5>
                     </div>
                     <div class="card__logo">
-                        <img src="/images/volume.svg" alt="">
+                        <img src="/images/fsu.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="card__info">
-                        <h4 id="card__third-name">Mitchell Stahl</h4>
-                        <p>Software Developer</p>
+                        <h4 id="card__third-name">Noah Rosenblatt</h4>
+                        <p>Marketing Director</p>
                     </div>
                     <div class="card__paragraph">
                         <h5>“I was honestly blown away by the professionalism and passion the Six Figure Lab team possessed. Almost immediately after my site was published, I started getting more lead flow.”</h5>
