--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
                     <h4 id="phrase">Propel your business to new heights
                         with <span class="gradient">6 Figure Labs!</span></h4>
 
-                    <h5 id="copyright">Copyright 2021-2022 Six Figure Labs.</h5>
+                    <h5 id="copyright">Copyright 2023 - Six Figure Labs.</h5>
 
 
                 </div>
