--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="card__info">
-                        <h4 id="card__second-name">Shannon Staton</h4>
+                        <h4 id="card__second-name">FSU</h4>
                         <p>Dorm Executive Director</p>
                     </div>
                     <div class="card__paragraph">
