--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="swiper-slide">
                     <div class="card__info">
                         <h4 id="card__second-name">FSU</h4>
-                        <p>Dorm Executive Director</p>
+                        <p>FSU</p>
                     </div>
                     <div class="card__paragraph">
                         <h5>“The NoleLodging website that Six Figure Labs created totally changed how our students interact with University Housing. They did an amazing job.”</h5>
